--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
         <a href="#" id="button" lang="en">Download CV</a>
     </nav>
   </header>
+
+  <section>
+      <article>
+        <div class="principal">
+          <h1>Ivan Arakaki</h1>
+          <p>Web Developer</p>
+        </div>
+        <a href="#" class="cv" lang="en">Download CV</a>
+        <a href="#" class="contato">Contato</a>
+      </article>
+  </section>
     
 </body>
 </html>
