--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <section>
       <article>
-        <div class="principal">
+        <div class="box">
           <h1>Ivan Arakaki</h1>
           <p>Web Developer</p>
         </div>
