--- a/index.html
+++ b/index.html
@@ -18,19 +18,17 @@
         <a href="#">Projetos</a>
         <a href="#">Sobre</a>
         <a href="#">Contato</a>
-        <a href="#" id="button" lang="en">Download CV</a>
+        <a href="#" class="button" lang="en">Download CV</a>
     </nav>
   </header>
 
   <section>
-      <article>
         <div class="box">
           <h1>Ivan Arakaki</h1>
           <p>Web Developer</p>
         </div>
-        <a href="#" class="cv" lang="en">Download CV</a>
-        <a href="#" class="contato">Contato</a>
-      </article>
+        <a href="#" class="button" lang="en">Download CV</a>
+        <a href="#" class="button">Contato</a>
   </section>
     
 </body>
