--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
   </header>
 
   <section>
-        <div class="box">
-          <h1>Ivan Arakaki</h1>
-          <p>Web Developer</p>
+        <div class="wrapper">
+          <div class="box">
+            <h1>Ivan Arakaki</h1>
+            <p>Web Developer</p>
+          </div>
+          <div class="navegation">
+            <a href="#" class="button" lang="en">Download CV</a>
+            <a href="#" class="button">Contato</a>
+          </div>
         </div>
-        <a href="#" class="button" lang="en">Download CV</a>
-        <a href="#" class="button">Contato</a>
   </section>
     
 </body>
