--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     </nav>
   </header>
 
-  <section>
+  <section class="banner">
         <div class="wrapper">
           <div class="box">
-            <h1>Ivan Arakaki</h1>
-            <p>Web Developer</p>
+            <h1 class="name">Ivan Arakaki</h1>
+            <p class="status">Web Developer</p>
           </div>
           <div class="navegation">
             <a href="#" class="button" lang="en">Download CV</a>
@@ -34,6 +34,19 @@
           </div>
         </div>
   </section>
+
+  <section class="wisdom">
+        <h1 class="knows">Skills</h1>
+          <ul class="progress-bar">
+              <li><img src="assets/img/ico_html5.png" alt="">HTML</li>
+              <li><img src="assets/img/ico_css3.png" alt="">CSS</li>
+              <li><img src="assets/img/ico_js.png" alt="">Javascript</li>
+              <li><img src="assets/img/ico_nodejs.png" alt="">NodeJS</li>
+              <li><img src="assets/img/icons8-processador-96.png" alt="">Hardware</li>
+              <li><img src="assets/img/ico_react.png" alt="">React</li>
+          </ul>
+  </section>
+  
     
 </body>
 </html>
