--- a/index.html
+++ b/index.html
@@ -35,16 +35,15 @@
         </div>
   </section>
 
-  <section class="wisdom">
-        <h1 class="knows">Skills</h1>
-          <ul class="progress-bar">
-              <li><img src="assets/img/ico_html5.png" alt="">HTML</li>
-              <li><img src="assets/img/ico_css3.png" alt="">CSS</li>
-              <li><img src="assets/img/ico_js.png" alt="">Javascript</li>
-              <li><img src="assets/img/ico_nodejs.png" alt="">NodeJS</li>
-              <li><img src="assets/img/icons8-processador-96.png" alt="">Hardware</li>
-              <li><img src="assets/img/ico_react.png" alt="">React</li>
-          </ul>
+  <section class="skill">
+        <h1 class="name -second">Skills</h1>
+        <dl class="type">
+              <dd class="icon"><img src="assets/img/ico_html5.png" alt="logo do html"></dd>
+              <dt class="iden">HTML</dt>
+              <dd>
+                <progress class="bar" max="100" value="70">70%</progress>
+             </dd>
+        </dl>
   </section>
   
     
