--- a/index.html
+++ b/index.html
@@ -37,15 +37,55 @@
 
   <section class="skill">
         <h1 class="name -second">Skills</h1>
-        <dl class="type">
-              <dd class="icon"><img src="assets/img/ico_html5.png" alt="logo do html"></dd>
-              <dt class="iden">HTML</dt>
-              <dd>
-                <progress class="bar" max="100" value="70">70%</progress>
-             </dd>
-        </dl>
-  </section>
-  
-    
+
+          <article class="type">
+              <img class="icon" src="assets/img/ico_html5.png" alt="logo do HTML5">
+              <div class="right">
+                <h2 class="iden">HTML</h2>
+                <progress class="progress-bar" max="100" value="70">70%</progress>
+              </div>
+          </article>  
+
+          <article class="type">
+              <img class="icon" src="assets/img/ico_css3.png" alt="logo do CSS3">
+              <div class="right">
+                <h2 class="iden">CSS</h2>
+                <progress class="progress-bar" max="100" value="70">70%</progress>
+              </div>
+            </article>   
+
+          <article class="type">
+                <img class="icon" src="assets/img/ico_js.png" alt="logo do Javascript">
+                <div class="right">
+                  <h2 class="iden">JS</h2>
+                  <progress class="progress-bar" max="100" value="70">70%</progress>
+                </div>
+          </article>
+
+          <article class="type">
+                <img class="icon" src="assets/img/ico_nodejs.png" alt="logo do NodeJS">
+                <div class="right">
+                  <h2 class="iden">NodeJS</h2>
+                  <progress class="progress-bar" max="100" value="70">70%</progress>
+                </div>
+          </article>
+
+          <article class="type">
+                <img class="icon" src="assets/img/ico_react.png" alt="logo do React">
+                <div class="right">
+                  <h2 class="iden">React</h2>
+                  <progress class="progress-bar" max="100" value="70">70%</progress>
+                </div>
+          </article>
+
+          <article class="type">
+                <img class="icon" src="assets/img/icons8-processador-96.png" alt="logo do Hardware">
+                <div class="right">
+                  <h2 class="iden">Hardware</h2>
+                  <progress class="progress-bar" max="100" value="70">70%</progress>
+                </div>
+          </article>
+          
+    </section>    
 </body>
 </html>
