--- a/index.html
+++ b/index.html
@@ -22,70 +22,76 @@
     </nav>
   </header>
 
-  <section class="banner">
-        <div class="wrapper">
-          <div class="box">
-            <h1 class="name">Ivan Arakaki</h1>
-            <p class="status">Web Developer</p>
+    <section class="banner">
+          <div class="wrapper">
+            <div class="box">
+              <h1 class="name">Ivan Arakaki</h1>
+              <p class="status">Web Developer</p>
+            </div>
+            <div class="navegation">
+              <a href="#" class="button" lang="en">Download CV</a>
+              <a href="#" class="button">Contato</a>
+            </div>
           </div>
-          <div class="navegation">
-            <a href="#" class="button" lang="en">Download CV</a>
-            <a href="#" class="button">Contato</a>
-          </div>
+    </section>
+
+    <section class="skill">
+          <h1 class="name -second">Skills</h1>
+
+          <div class="wrapper-skill">
+              <article class="type">
+                  <img class="icon" src="assets/img/ico_html5.png" alt="logo do HTML5">
+                  <div class="right">
+                    <h2 class="iden">HTML</h2>
+                    <progress class="progress-bar" max="100" value="70">70%</progress>
+                  </div>
+              </article>
+              <article class="type">
+                  <img class="icon" src="assets/img/ico_css3.png" alt="logo do CSS3">
+                  <div class="right">
+                    <h2 class="iden">CSS</h2>
+                    <progress class="progress-bar" max="100" value="70">70%</progress>
+                  </div>
+                </article>
+              <article class="type">
+                    <img class="icon" src="assets/img/ico_js.png" alt="logo do Javascript">
+                    <div class="right">
+                      <h2 class="iden">JS</h2>
+                      <progress class="progress-bar" max="100" value="70">70%</progress>
+                    </div>
+              </article>
+              <article class="type">
+                    <img class="icon" src="assets/img/ico_nodejs.png" alt="logo do NodeJS">
+                    <div class="right">
+                      <h2 class="iden">NodeJS</h2>
+                      <progress class="progress-bar" max="100" value="70">70%</progress>
+                    </div>
+              </article>
+              <article class="type">
+                    <img class="icon" src="assets/img/ico_react.png" alt="logo do React">
+                    <div class="right">
+                      <h2 class="iden">React</h2>
+                      <progress class="progress-bar" max="100" value="70">70%</progress>
+                    </div>
+              </article>
+              <article class="type">
+                    <img class="icon" src="assets/img/icons8-processador-96.png" alt="logo do Hardware">
+                    <div class="right">
+                      <h2 class="iden">Hardware</h2>
+                      <progress class="progress-bar" max="100" value="70">70%</progress>
+                    </div>
+              </article>
+          </div>  
+    </section>
+
+    <section class="project">
+        <h1 class="title-project">Projetos</h1>
+        <div class="img-project">
+            <img src="assets/img/bugdroid.png" width="280" height="280" class="android" alt="logo Android">
+            <img src="assets/img/logo taichi.jpeg" width="280" height="280" class="taichi" alt="logo da empresa Taichi">
+            <img src="assets/img/AvatarMaker.png" width="280" height="280" class="ivan" alt="rosto em desenho animado">
         </div>
-  </section>
-
-  <section class="skill">
-        <h1 class="name -second">Skills</h1>
-
-          <article class="type">
-              <img class="icon" src="assets/img/ico_html5.png" alt="logo do HTML5">
-              <div class="right">
-                <h2 class="iden">HTML</h2>
-                <progress class="progress-bar" max="100" value="70">70%</progress>
-              </div>
-          </article>  
-
-          <article class="type">
-              <img class="icon" src="assets/img/ico_css3.png" alt="logo do CSS3">
-              <div class="right">
-                <h2 class="iden">CSS</h2>
-                <progress class="progress-bar" max="100" value="70">70%</progress>
-              </div>
-            </article>   
-
-          <article class="type">
-                <img class="icon" src="assets/img/ico_js.png" alt="logo do Javascript">
-                <div class="right">
-                  <h2 class="iden">JS</h2>
-                  <progress class="progress-bar" max="100" value="70">70%</progress>
-                </div>
-          </article>
-
-          <article class="type">
-                <img class="icon" src="assets/img/ico_nodejs.png" alt="logo do NodeJS">
-                <div class="right">
-                  <h2 class="iden">NodeJS</h2>
-                  <progress class="progress-bar" max="100" value="70">70%</progress>
-                </div>
-          </article>
-
-          <article class="type">
-                <img class="icon" src="assets/img/ico_react.png" alt="logo do React">
-                <div class="right">
-                  <h2 class="iden">React</h2>
-                  <progress class="progress-bar" max="100" value="70">70%</progress>
-                </div>
-          </article>
-
-          <article class="type">
-                <img class="icon" src="assets/img/icons8-processador-96.png" alt="logo do Hardware">
-                <div class="right">
-                  <h2 class="iden">Hardware</h2>
-                  <progress class="progress-bar" max="100" value="70">70%</progress>
-                </div>
-          </article>
-          
-    </section>    
+    </section>
+  
 </body>
 </html>
