progress bar atualizado

--- a/index.html
+++ b/index.html
@@ -43,42 +43,42 @@
                   <img class="icon" src="assets/img/ico_html5.png" alt="logo do HTML5">
                   <div class="right">
                     <h2 class="iden">HTML</h2>
-                    <progress class="progress-bar" max="100" value="70">70%</progress>
+                    <progress class="progress-bar" max="100" value="">50%</progress>
                   </div>
               </article>
               <article class="type">
                   <img class="icon" src="assets/img/ico_css3.png" alt="logo do CSS3">
                   <div class="right">
                     <h2 class="iden">CSS</h2>
-                    <progress class="progress-bar" max="100" value="70">70%</progress>
+                    <progress class="progress-bar" max="100" value="">50%</progress>
                   </div>
                 </article>
               <article class="type">
                     <img class="icon" src="assets/img/ico_js.png" alt="logo do Javascript">
                     <div class="right">
                       <h2 class="iden">JS</h2>
-                      <progress class="progress-bar" max="100" value="70">70%</progress>
+                      <progress class="progress-bar" max="100" value="">50%</progress>
                     </div>
               </article>
               <article class="type">
                     <img class="icon" src="assets/img/ico_nodejs.png" alt="logo do NodeJS">
                     <div class="right">
                       <h2 class="iden">NodeJS</h2>
-                      <progress class="progress-bar" max="100" value="70">70%</progress>
+                      <progress class="progress-bar" max="100" value="">50%</progress>
                     </div>
               </article>
               <article class="type">
                     <img class="icon" src="assets/img/ico_react.png" alt="logo do React">
                     <div class="right">
                       <h2 class="iden">React</h2>
-                      <progress class="progress-bar" max="100" value="70">70%</progress>
+                      <progress class="progress-bar" max="100" value="">50%</progress>
                     </div>
               </article>
               <article class="type">
                     <img class="icon" src="assets/img/icons8-processador-96.png" alt="logo do Hardware">
                     <div class="right">
                       <h2 class="iden">Hardware</h2>
-                      <progress class="progress-bar" max="100" value="70">70%</progress>
+                      <progress class="progress-bar" max="100" value="">50%</progress>
                     </div>
               </article>
           </div>  
