--- a/index.html
+++ b/index.html
@@ -86,11 +86,19 @@
 
     <section class="project">
         <h1 class="title-project">Projetos</h1>
-        <div class="img-project">
-            <img src="assets/img/bugdroid.png" width="280" height="280" class="android" alt="logo Android">
-            <img src="assets/img/logo taichi.jpeg" width="280" height="280" class="taichi" alt="logo da empresa Taichi">
-            <img src="assets/img/AvatarMaker.png" width="280" height="280" class="ivan" alt="rosto em desenho animado">
-        </div>
+
+          <div class="wrapper-card">
+              <figure class="card-project">
+                  <img class="logo -white" src="assets/img/bugdroid.png"  alt="logo Android">
+              </figure>
+              <figure class="card-project">
+                  <img class="logo" src="assets/img/logo taichi.jpeg" alt="logo da empresa Taichi">
+              </figure>
+              <figure class="card-project">
+                    <img class="logo" src="assets/img/AvatarMaker.png" alt="rosto em desenho animado">
+              </figure>
+          </div>
+        
     </section>
   
 </body>
