--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <img src="assets/img/AvatarMaker.png" width="80px" height="80px" alt="logo do Ivan">
     
     <nav>
-        <a href="#" lang="en">Skills</a>
-        <a href="#">Projetos</a>
-        <a href="#">Sobre</a>
-        <a href="#">Contato</a>
+        <a href="#"  class="main" lang="en">Skills</a>
+        <a href="#" class="main">Projetos</a>
+        <a href="#" class="main">Sobre</a>
+        <a href="#" class="main">Contato</a>
         <a href="#" class="button" lang="en">Download CV</a>
     </nav>
   </header>
@@ -88,18 +88,29 @@
         <h1 class="title-project">Projetos</h1>
 
           <div class="wrapper-card">
-              <figure class="card-project">
-                  <img class="logo -white" src="assets/img/bugdroid.png"  alt="logo Android">
-              </figure>
-              <figure class="card-project">
-                  <img class="logo" src="assets/img/logo taichi.jpeg" alt="logo da empresa Taichi">
-              </figure>
-              <figure class="card-project">
-                    <img class="logo" src="assets/img/AvatarMaker.png" alt="rosto em desenho animado">
-              </figure>
+              <a href="https://arakakivan.github.io/projeto-android/" target="_blank">
+                  <figure class="card-project">
+                      <img class="logo -white" src="assets/img/bugdroid.png"  alt="logo Android">
+                  </figure>
+              </a>
+              <a href="https://arakakivan.github.io/html-css/Trabalho.site/sitetaichi.html" target="_blank">
+                  <figure class="card-project">
+                      <img class="logo" src="assets/img/logo taichi.jpeg" alt="logo da empresa Taichi">
+                  </figure>
+              </a>
+              <a href="#">
+                  <figure class="card-project">
+                      <img class="logo" src="assets/img/AvatarMaker.png" alt="rosto em desenho animado">
+                  </figure>
+              </a>
           </div>
-        
-    </section>
+      </section>
   
+      <div class="main-article">
+        <article>
+          <p>Sempre atuando na área Administrativa e Comercial desde de 2008, Ivan passou por restaurantes e por uma empresa de importação de produtos orientais. Com conhecimentos de hardware, começou a se aventurar no mundo de HTML5 e CSS3 no começo de 2022. Curioso, fez cursos no "Curso em Video" e "CollabCode". Atualmente iniciou os estudos no linguagem Javascript. </p>
+        </article>
+      </div>
+
 </body>
 </html>
