--- a/index.html
+++ b/index.html
@@ -105,12 +105,15 @@
               </a>
           </div>
       </section>
-  
-      <div class="main-article">
-        <article>
-          <p>Sempre atuando na área Administrativa e Comercial desde de 2008, Ivan passou por restaurantes e por uma empresa de importação de produtos orientais. Com conhecimentos de hardware, começou a se aventurar no mundo de HTML5 e CSS3 no começo de 2022. Curioso, fez cursos no "Curso em Video" e "CollabCode". Atualmente iniciou os estudos no linguagem Javascript. </p>
-        </article>
-      </div>
+
+      <section class="main-article">
+              <h1 class="title-project">Sobre</h1>
+            <div>
+              <article>
+                <p class="info">Sempre atuando na área Administrativa e Comercial desde de 2008, Ivan passou por restaurantes e por uma empresa de importação de produtos orientais. Com conhecimentos de hardware, começou a se aventurar no mundo de HTML5 e CSS3 no inicio de 2022. Curioso, fez cursos no "Curso em Video" e "CollabCode". Atualmente iniciou os estudos no linguagem Javascript. </p>
+              </article>
+            </div>
+       </section>
 
 </body>
 </html>
