--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </a>
               <a href="https://arakakivan.github.io/html-css/Trabalho.site/sitetaichi.html" target="_blank">
                   <figure class="card-project">
-                      <img class="logo" src="assets/img/logo taichi.jpeg" alt="logo da empresa Taichi">
+                      <img class="logo -white" src="assets/img/logo taichi.jpeg" alt="logo da empresa Taichi">
                   </figure>
               </a>
               <a href="#">
@@ -113,6 +113,8 @@
                 <p class="info">Sempre atuando na área Administrativa e Comercial desde de 2008, Ivan passou por restaurantes e por uma empresa de importação de produtos orientais. Com conhecimentos de hardware, começou a se aventurar no mundo de HTML5 e CSS3 no inicio de 2022. Curioso, fez cursos no "Curso em Video" e "CollabCode". Atualmente iniciou os estudos no linguagem Javascript. </p>
               </article>
             </div>
+            <button class="button-arrow -left"><spam class="content">avançar</spam></button>
+            <button class="button-arrow -right"><spam class="content">voltar</spam></button>
        </section>
 
 </body>
