--- a/index.html
+++ b/index.html
@@ -117,5 +117,11 @@
             <button class="button-arrow -right"><spam class="content">voltar</spam></button>
        </section>
 
+       <footer>
+        <a href="https://www.facebook.com/ivan.h.arakaki" target="_blank"><img class="footer" src="assets/img/facebook.png" alt="logo do Facebook"></a>
+        <a href="www.linkedin.com/in/ivan-hirose-3751b466" target="_blank"><img class="footer" src="assets/img/linkedin.png" alt="logo do Linkedin"></a>
+        <a href="https://github.com/arakakivan" target="_blank"><img class="footer" src="assets/img/github.png" alt="logo do github"></a>
+       </footer>
+
 </body>
 </html>
